--- a/test/Causal inference rough draft code copy.Rmd
+++ b/test/Causal inference rough draft code copy.Rmd
@@ -2,7 +2,9 @@
 title: "Causal Inference Rough Draft"
 author: "Patrick Chase"
 date: "4/21/2021"
-output: pdf_document
+output:
+  word_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
